[package]
name = "t-bank-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
tracing-subscriber = "0.3.22"
validator = "0.20.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
url = { version = "2.5.8", features = ["serde"] }
tracing = "0.1.44"

[dev-dependencies]
dotenvy = "0"
tokio = { version = "1", features = ["full"] }
